--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "oauthmanager"
 version = "0.1.0"
-description = ""
+description = "A module for managing API authentication using 1Password and more."
 authors = ["Suhail <suhailece@gmail.com>"]
 readme = "README.md"
+license = "MIT"
 packages = [{include = "oauthmanager", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.11.7"
-
+python = "^3.11"
 
 [build-system]
 requires = ["poetry-core"]
