--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "oauthmanager", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+cryptography = "^43.0.1"
 
 [build-system]
 requires = ["poetry-core"]
